Wed Jun 22 14:47:53 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_buffering.rb
	* test/openssl/test_pkcs12.rb: Inherit from Test::Unit::TestCase
	  instead of Mintest::Unit::TestCase. [ruby-core:37275]
	  
Wed Jun 22 12:41:03 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_to_der):
	  OpenSSL::SSL::Session#to_der was broken. Fix buffer handling.

	* test/openssl/test_ssl_session.rb (test_session): Test it.

Wed Jun 22 12:38:52 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/openssl/test_ssl_session.rb: Split out SSL::Session related
	  tests from test_ssl.rb

Wed Jun 22 03:20:52 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: Fix cyclic references of
	  objects.  Thanks to CvX for reporting the bug and a test case.
	* test/psych/test_object.rb: test for cyclic object references.

Wed Jun 22 02:39:54 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP.post_form): Do not ignore query part of
	  the given URI to post. See #655.

	* test/net/http/test_http.rb, test/net/http/utils.rb: Test it.

Wed Jun 22 01:28:13 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/openssl/test_x509store.rb (test_set_errors): Redhat is
	  distributing a patched version of OpenSSL that allows multiple CRL
	  for a key (multi-crl.patch.) Make test pass on such env. See #4122,
	  #4554.

Tue Jun 21 21:50:37 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/webrick/httpresponse.rb (HTTPResponse#setup_header): Close 
	  HTTP/1.1 connection when returning an IO object as response body 
	  without setting HTTPResponse#chunked to true. See #855 no.1.

	* test/webrick/test_httpserver.rb: Test it.

Tue Jun 21 21:27:34 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* internal.h: move rb_thread_io_blocking_region() declaration
	  from intern.h to internal.h. It's still experimental API and
	  need more discussion. [ruby-dev:43698]